ifbcat_api/static/css/ifbcat_admin.css
@import url("https://fonts.googleapis.com/css?family=Open+Sans:100,200,300,400,500,600,700,800,900%7CComfortaa:100,200,300,400,500,600,700,800,900%7CComfortaa:100,200,300,400,500,600,700,800,900&display=swap");
.brand-image{
    box-shadow:none !important;
}
.select2.select2-container
{
    width:100%!important;
}
.select2.select2-container .select2-selection__choice{
    color: #278bc7 !important;
    background-color: white !important;
    border: 1px solid #278bc7 !important;
    padding-left:0px !important;
}
.select2.select2-container .select2-selection__choice>span:not(:first-child){
    margin-left:14px;
    padding-left:7px;
}
.select2.select2-container .select2-selection__choice>span:first-child{
    margin-left:0px;
    margin-right: 4px;
    padding:0px 5px;
    border-right: 1px solid #278bc7 !important;
}
.select2.select2-container .select2-selection__choice>button{
    border-width: 0px;
    color: white !important;
    background-color: #278bc7 !important;
    color: #278bc7 !important;
    background-color: transparent !important;
    margin-left:0px;
    padding-left: 4px;
    padding-right: 4px;
    border-right: 1px solid #278bc7 !important;
}
.select2.select2-container .select2-selection__choice>span:hover,
.select2.select2-container .select2-selection__choice>button:hover{
        background-color: #00000033 !important;
}
.select2.select2-container .select2-selection__choice{
}
.select2.select2-container .select2-selection__choice:hover{
    color: white !important;
    background-color: #278bc7 !important;
}
.select2-container--admin-autocomplete .select2-results__option--highlighted[aria-selected],
.select2.select2-container .select2-selection__choice:hover>button{
    color: white !important;
}
ul.select2-selection__rendered{
    border: 1px solid #aaa;
    border-radius: 4px;
}
.select2-container.select2-container--open ul.select2-selection__rendered {
    border-color: #80bdff;
}
.select2-container.select2-container--open.select2-container--above ul.select2-selection__rendered {
    border-top-left-radius: 0px;
    border-top-right-radius: 0px;
}
.select2-container.select2-container--open.select2-container--below ul.select2-selection__rendered {
    border-bottom-left-radius: 0px;
    border-bottom-right-radius: 0px;
}
.theme-default .sidebar-light-primary+.content-wrapper{
    background-color: #eff4fb;
}

.sidebar {
    /*background-color: #edf4f1;*/
}

.theme-default .navbar-white.navbar-light .nav-link,
.theme-default .sidebar-light-primary .nav-link {
    font-family: 'Comfortaa';
}

.theme-default .sidebar-light-primary .sidebar .nav-item a.nav-link {
    color: #278bc7;
}
.theme-default .sidebar-light-primary .sidebar .nav-item a.nav-link.active {
    color: #61963f !important;
    background-color: #eff4fb !important;
    box-shadow:none !important;
    border-radius:none !important;
}

.theme-default .navbar-white.main-header.navbar {
    padding:0px;
}
.theme-default .navbar-white.main-header .nav-item a.nav-link {
    color: #278bc7;
    font-size: 15px;
    padding-bottom: 10px;
    padding-left: 10px;
    padding-right: 20px;
    font-weight: 900;
    transition-duration: .2s;
    padding-top: 10px;
    border-width: 0px;
    border-bottom-width: 4px;
    border-color: white;
    border-style: solid;
}
.theme-default .navbar-white.main-header .nav-item a.nav-link.active {
    color: #61963f;
    background-color: #eff4fb;
    border-width: 0px;
    border-bottom-width: 4px;
    border-style: solid;
    border-color: #61963f;
}
.theme-default .navbar-white.main-header .navbar-nav{
    margin-left: 0.5em;
}
.theme-default .navbar-white.main-header .navbar-nav .nav-item .nav-link{
    padding-top: 22px;
    padding-bottom: 30px;
}
.theme-default.layout-navbar-fixed .wrapper .main-header {
    z-index: 1039;
}
.theme-default .sidebar-light-primary .brand-text{
    font-size: 15px;
    font-weight: 900!important;
    color: #278bc7;
}
.theme-default .sidebar-light-primary .brand-link{
    padding-bottom: 0.2em;
    height:57px;
    font-family: 'Comfortaa';
}
.theme-default .sidebar-light-primary .brand-link .brand-image{
    opacity: 1!important;
    max-height: calc( 57px - 0.4em );
    height: calc( 57px - 0.4em );
    margin-top: -0.6em;
    content:url("/static/img/logo-ifb_small.png");
    border-radius:0!important;
}
.theme-default.sidebar-collapse .sidebar-light-primary .brand-link .brand-image{
    margin-top: -0.5em;
    margin-left: 0.95em;
    height: 45px;
    content:url(/static/img/ifb_avatar.png);
}
.theme-default .sidebar-light-primary+.content-wrapper .timeline-item .timeline-header:last-child{
    border-bottom:0;
}
.theme-default .sidebar-light-primary+.content-wrapper .timeline-item{
    border-radius: 0;
    border-bottom-right-radius: 10px;
    box-shadow: 1px 1px 4px #8dbce1;
}
.theme-default .sidebar-light-primary+.content-wrapper .card{
    border-radius: 0;
    border-bottom-right-radius: 30px;
    box-shadow: 2px 2px 8px #8dbce1;
}
.theme-default .sidebar-light-primary+.content-wrapper .card-body .card-body{
    padding:1.25rem!important;
}
.theme-default .sidebar-light-primary+.content-wrapper .card .card+.card{
    margin-top: 2em!important;
}
.theme-default .sidebar-light-primary+.content-wrapper .card .card{
    border-radius: 0;
    border-bottom-right-radius: 30px;
    border: 1px solid rgba(0,0,0,.125);
}
.theme-default .sidebar-light-primary+.content-wrapper .card .tab-pane>.card{
    border-top: 0px ;
    box-shadow: none;
}
.theme-default .sidebar-light-primary+.content-wrapper .card *:not(.tab-pane)>.card{
    border-top: 1px solid #278bc7;
}
.theme-default .sidebar-light-primary+.content-wrapper .card-primary.card-outline {
    border-top: 3px solid #278bc7;
}
.theme-default .sidebar-light-primary+.content-wrapper .card .card-header{
    font-family: 'Comfortaa';
    color: #11346f;
}
.theme-default .sidebar-light-primary+.content-wrapper .card .card-header{
    border-bottom:none;
}
.theme-default .sidebar-light-primary+.content-wrapper .card .card-header+.card-body{
    border-top: 1px solid rgba(0,0,0,.125);
}
.theme-default .sidebar-light-primary+.content-wrapper .btn-success {
    background-color: #61963f;
    border-color: #61963f;
}
.theme-default .sidebar-light-primary+.content-wrapper .bg-success {
    background-color: #61963f !important;
}
.theme-default .sidebar-light-primary+.content-wrapper .btn-outline-success {
    color: #61963f;
    border-color: #61963f;
}
.theme-default .sidebar-light-primary+.content-wrapper .btn-outline-success:hover {
    color: #fff;
    background-color: #61963f;
    border-color: #61963f;
}
.theme-default .sidebar-light-primary+.content-wrapper .btn-outline-info {
    color: #278bc7;
    border-color: #278bc7;
}
.theme-default .sidebar-light-primary+.content-wrapper .btn-outline-info:hover {
    color: #fff;
    background-color: #278bc7;
    border-color: #278bc7;
}
.sidebar-mini.sidebar-collapse .sidebar-light-primary .nav-sidebar .nav-header {
    display: initial;
}
.sidebar-mini.sidebar-collapse .sidebar-light-primary .nav-sidebar .nav-header::after {
    content: '';
    height: 1.5em;
    width: 20px;
    background: -webkit-linear-gradient(left,rgba(255,0,0,0) 0,white 100%);
    position: absolute;
    left: calc( 100% - 20px );
}
.form-group.errors *,
.form-group.errors  .select2-selection{
    border-color: red;
}
.form-group.errors label {
    color: #a00;
}
aside .sidebar .image .user-profile{
    color: #278bc7;
}
.card, .card-header, .modal-content, .content-wrapper{
    background: #fff !important;
}
html, body{
    color: #212529;
}
.modal-header{
    border-bottom: 1px solid #e9ecef;
}
.nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
    color: #495057;
    background-color: #fff;
    border-color: #dee2e6 #dee2e6 #fff;
}
.nav-tabs {
    border-bottom: 1px solid #dee2e6;
}
.nav-tabs .nav-link:focus, .nav-tabs .nav-link:hover {
    border-color: #e9ecef #e9ecef #dee2e6;
}
.accent-primary .btn-link, .accent-primary .nav-tabs .nav-link, .accent-primary a:not(.dropdown-item):not(.btn-app):not(.nav-link):not(.brand-link):not(.page-link):not(.btn) {
    color: #007bff;
}
.accent-primary .btn-link:hover, .accent-primary .nav-tabs .nav-link:hover, .accent-primary a:not(.dropdown-item):not(.btn-app):not(.nav-link):not(.brand-link):not(.page-link):not(.btn):hover {
    color: #0056b3;
}
/**/

